# NEO-DFT

./: .gitignore  INPUT.DOC  INTRO.DOC  IRON.DOC  Makefile.in  PROG.DOC  REFS.DOC  TESTS.DOC  aldeci.src  algnci.src  basccn.src  basg3l.src  basn31.src  blas.src  ccddi.src  ccquad.src  ccsdt.src  ceeis.src  chgpen.src  cisgrd.src  comp  compall  config  cosmo.src  cosprt.src  cpmchf.src  dccc.src  dcgrd.src  dcgues.src  dcint2.src  dclib.src  dcmp2.src  dcscf.src  dctran.src  ddilib.src  delocl.src  demrpt.src  dft.src  dftdis.src  dftgrd.src  (+184 more)
libcchem/: ALL_BUILD.vcproj  CChem.sln  CMakeLists.txt  Makefile.am  Makefile.in  README  ZERO_CHECK.vcproj  aaa.readme.1st  aclocal.m4  build-cchem  cchem.vcproj  configure  configure.ac
libcchem/boost/: Makefile  boost-1.43.0.nvcc.patch  boost-gcc-4.7.patch  boost_1_46_0.nvcc.patch  boost_1_46_1.nvcc.patch
libcchem/config/: am_path_vtk.m4  ax_cuda.m4  config.h.in  depcomp  flymake.mk  h5cpp.m4
libcchem/config/m4/: libtool.m4
libcchem/doc/: Doxyfile
libcchem/examples/: Makefile.am  Makefile.in  cublas.cpp
libcchem/ga/: Makefile  ga-5-0-2.patch  ga-5-1.patch  ga.svn.patch
libcchem/rysq/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  directory.dox  libtool
libcchem/rysq/config/: ax_cuda.m4  cheetah.mk  config.h.in  flymake.am
libcchem/rysq/doc/: Doxyfile  main.dox
libcchem/rysq/lib/: rys.m
libcchem/rysq/lib/elisp/: cc-cheetah-mode.el  elisp.dox
libcchem/rysq/lib/python/: directory.dox  librysq.py  rysq-generate.py  shell.py  spec.py
libcchem/rysq/src/: Makefile.am  Makefile.in  assert.hpp  constants.h  constants.h.tmpl  eri-eval.hpp  eri-transform.hpp  eri.cpp  fock-eval.hpp  fock-matrix.hpp  fock-transform.hpp  fock.cpp  foreach.hpp  global.tmpl  index.hpp  instantiate.cpp  meta.hpp  normalize.h  normalize.h.tmpl  quartet.cpp  quartet.hpp  recurrence.hpp  rysq-core.hpp.in  rysq-cuda.hpp  rysq-eri.hpp  rysq-fock.hpp  rysq-types.hpp  rysq-types.hpp.tmpl  rysq.cpp  rysq.hpp  rysq.hpp.in  shell.cpp  transform.cpp  transform.hpp  transpose.hpp  types.hpp  util.h
libcchem/rysq/src/bindings/: Makefile.in  fortran.cpp  fortran.h  gamess.cpp  gamess.h
libcchem/rysq/src/cuda/: Makefile.am  Makefile.in  array.hpp  detail.hpp  eri.cpp  eri.hpp  fock.cpp  fock.hpp  host.cpp  host.hpp~  index.cpp  matrix.hpp  quartet.cpp  runtime.cpp  shell.cpp
libcchem/rysq/src/kernel/: Makefile.am  Makefile.in  eri.hpp  eri1.hpp  eri2.hpp  forward.hpp  global.tmpl  new.hpp  primitives.hpp  quadrature.hpp  quadrature1-impl.hpp  quadrature1-impl.hpp.tmpl  quadrature1.hpp  quadrature2-impl.hpp  quadrature2-impl.hpp.tmpl  quadrature2.hpp  quadrature2.py  recurrence.hpp  transfer.hpp  vector.hpp
libcchem/rysq/src/roots/: Makefile.am  Makefile.f  Makefile.in  README  asymptotic.hpp  constants.hpp  dir.dox  evaluate.hpp  opq.h  polynomial.hpp  roots.cpp  roots.hpp  roots0.hpp  roots1.hpp  roots2.hpp  roots3.hpp  roots4.hpp  roots5.hpp  roots_type.hpp  terms.py  test.cpp
libcchem/src/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  array_ref.hpp  blas.hpp  cchem.hpp  config.hpp  cublas.hpp  cuda.hpp  dictionary.hpp  distributed.hpp  exception.hpp  file.hpp  foreach.hpp  lapack.hpp  libcchem.cpp  omp.hpp  parallel.hpp  runtime.cpp  runtime.hpp  thread.hpp  typename.hpp
libcchem/src/adapter/: Makefile.in  rysq.hpp
libcchem/src/array/: Makefile.am  Makefile.in  adapter.hpp  array.hpp  assign.hpp  forward.hpp  ga.hpp  hdf5.cpp  hdf5.hpp  memory.hpp  permute.hpp
libcchem/src/basis/: Makefile.am  Makefile.in  basis.cpp  basis.hpp  block.hpp  config.hpp.in  forward.hpp  molecule.cpp  molecule.hpp  normalize.hpp  shell.cpp  shell.hpp
libcchem/src/bindings/: Makefile.am  Makefile.in  bindings.cpp  bindings.h  bindings.hpp  cc.cpp  dft.cpp  eigen.cpp  fortran.cpp  fortran.h  gamess.cpp  gamess.h  hf.cpp  storage.hpp
libcchem/src/cc/: Makefile.am  Makefile.in  cc.cpp  cc.hpp  dgemm.cpp  direct.cpp  doubles.cpp  integrals.cpp  mp2.cpp  sd.cpp  tensor.hpp  triples.cpp  triples.hpp
libcchem/src/cc.ijk/: Makefile.am  Makefile.in  cc.hpp  triples.cpp  triples.hpp
libcchem/src/contrib/: Makefile.in
libcchem/src/core/: Makefile.am  Makefile.in  function_adapter.hpp  integral.hpp  submatrix.hpp  ublas.hpp  wavefunction.hpp
libcchem/src/dft/: Makefile.in  dft.cpp  dft.hpp  grid.hpp  matrix.hpp  types.hpp
libcchem/src/distributed/: element.hpp  forward.hpp  ops.hpp  traits.hpp
libcchem/src/eigen/: sort.hpp
libcchem/src/file/: array.hpp
libcchem/src/fusion/: shell.hpp
libcchem/src/hf/: Makefile.am  Makefile.in  cuda.hpp  device_thread.hpp  fock.cpp  fock.hpp  generator.hpp  hf.cpp  hf.hpp  histogram.hpp  kernel.hpp  screen.hpp  thread.hpp  work_queue.hpp
libcchem/src/integral/: eri.hpp  quartet.hpp  screening.hpp
libcchem/src/integrals/: Makefile.am  Makefile.in  eri.hpp  integrals.cpp  integrals.hpp  quartet.hpp  rysq.hpp  screening.hpp
libcchem/src/iterator/: increment.hpp  indexed.hpp  iterator.hpp  range.hpp
libcchem/src/math/: matrix.hpp
libcchem/src/matrix/: Makefile.am  Makefile.in  adapter.h  block.hpp  matrix.hpp  matrix_base.hpp  meta.hpp  ops.hpp  permute.hpp  plot.cpp  plot.hpp  rectangular.hpp  slice.hpp  symmetric.hpp
libcchem/src/mp2/: Makefile.am  Makefile.in  energy.cpp  mp2.hpp
libcchem/src/multi_array/: Makefile.am  Makefile.in  algorithm.hpp  detail.hpp  link.cpp  multi_array.hpp
libcchem/src/parallel/: context.hpp  counter.hpp  environment.hpp  parallel.hpp
libcchem/src/phoenix/: Makefile.in  work_queue.hpp
libcchem/src/util/: Makefile.am  Makefile.in  array.hpp  assert.hpp  copy.hpp  foreach.hpp  generator.hpp  map_cache.hpp  numeric.hpp  range.hpp  reduce.hpp  slice.hpp  unpack.hpp  util.hpp
libcchem/src/utility/: Makefile.am  Makefile.in  any.hpp  array.hpp  numeric.hpp  profiler.hpp  progress.hpp  timer.hpp
libcchem/tests/: cc-catnip.inp  cc-h2co.inp  cc-h3nnh.inp  mp2-absinthin.inp  mp2-digi.inp  mp2-ketamine.inp  mp2-urea.inp  mp2-zwit.inp  paper-cocaine.inp  paper-taxol.inp  paper-valinomycin.inp  paper-wat19.inp  scf-camp.inp  scf-cyt.inp  scf-ginkgo.inp
(+1341 files in other folders)
